--- a/web/css/orcid-cornell-edu.css
+++ b/web/css/orcid-cornell-edu.css
@@ -6,8 +6,14 @@ html, body {
 }
 h1 span {
 	padding-right:90px;
-	color:#B31B1B;font-family:sarif;font-size:1.35em;
+	color:#B31B1B;
+	font-family:sarif;
+	font-size:1.35em;
 	font-weight: bold;
+}
+h2 {
+    font-family: "Lucida Sans Unicode","Lucida Grande",Geneva,helvetica,sans-serif;
+    color: #656;
 }
 p {
 	font-size: 16px;
@@ -31,17 +37,20 @@ section.banner div {
    height: 3.4em;
 }
 section.primary {
-	margin: 30px 40px 20px 40px
+	margin: 30px 40px 20px 40px;
+}
+section.result-status {
+	margin: 30px 0 0 0;
 }
 img#orcid-logo {
 	vertical-align:top;
 	margin-top:-.1em;
 }
 div#green-arrow {
-	position: absolute; top:60px; left:206px
+	position: absolute; top:60px; left:206px;
 }
 div#gray-arrow {
-	position: absolute; top:103px; left:206px
+	position: absolute; top:103px; left:206px;
 }
 div#intro-text {
 	margin: 30px 0 25px 0;
